# ling

./: .env.example  .gitignore  HANDOFF-esp32-device-to-backend.md  Ling-ESP32客户端接入架构与接口方案.md  Ling-产品设计文档.md  Ling-儿童端产品设计.md  Ling-孩子端产品设计.md  Ling-定制音色可行性与实施方案-2026-07-11.md  Ling-实时音视频调研与决策记录-2026-07-10.md  Ling-家长端产品设计.md  Ling-灵灵端产品设计.md  Ling-记忆架构设计.md  README.md  pyproject.toml  requirements.txt  run.sh
backend/: __init__.py  app.py  bindings.py  child_tts.py  db.py  engine.py  experience.py  gemini_text.py  jimeng_video.py  life.py  llm.py  media.py  media_worker.py  memory.py  prompts.py  realtime.py  seed.py  speech_asr.py  voice_profiles.py  volcengine_rtc.py  workers.py
backend/curriculum/: pep_grade3_unit4.json
backend/demo/: base_world.json  mock_assets.json
design/: owling-app-design.html
docs/: CHANGELOG.md  README.md  custom-voice.md  esp32-device-api.md  implementation-status.md  media-generation.md  realtime.md
frontend/: index.html
frontend/assets/: app.css  app.js  volcengine-rtc.LICENSE  volcengine-rtc.min.js
frontend/child/: api.mjs  app.mjs  index.html  manifest.webmanifest  model.mjs  scanner.mjs  sw.js  (+1 more)
scripts/: generate_voice_previews.py  validate_voice_previews.py
tests/: conftest.py  test_app_routes.py  test_bindings.py  test_child_tts.py  test_experience.py  test_gemini_text.py  test_jimeng_video.py  test_life.py  test_llm.py  test_media.py  test_minicpm_realtime.py  test_projections.py  test_realtime.py  test_session_lifecycle.py  test_speech_asr.py  test_static_apps.py  test_volcengine_rtc.py  test_workers_concurrency.py
(+32 files in other folders)
