[project]
name = "ling"
version = "0.1.0"
description = "灵 Ling · 共同成长的玩偶 —— 五层记忆 + 教材编织 + 数字生命"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "anthropic>=0.40",
    "websockets>=12",
    "python-dotenv>=1.2.2",
    "qrcode[pil]>=8.2",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
